# osu-rust

./: .gitignore  Cargo.toml  README.md
deserialize/: Cargo.toml
deserialize/src/: lib.rs
deserialize_derive/: .gitignore  Cargo.toml  README.md
deserialize_derive/src/: de.rs  lib.rs
src/: main.rs
src/beatmap/: beatmap_info.rs  difficulty.rs  general.rs  metadata.rs  mod.rs
src/graphics/: anchor.rs  color.rs  curve.rs  lerp.rs  mod.rs  point.rs
src/parser/: beatmap_parser.rs  mod.rs
src/storyboard/: background.rs  builder.rs  commands.rs  layer.rs  mod.rs  sprite.rs  storyboard_info.rs
