[package]
name = "osu-rust"
version = "0.1.0"
edition = "2021"
authors = ["xiaohuihuiold <xiaohuihuiold@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
sdl2 = "0.35.2"
regex = "1.6.0"
deserialize = { path = "./deserialize" }
deserialize_derive = { path = "./deserialize_derive" }
